--- a/package.json
+++ b/package.json
@@ -1,1 +1,6 @@
-{"private":true,"dependencies":{"types-registry":"^0.1.680"}}
+{
+  "private": true,
+  "dependencies": {
+    "type": "module"
+  }
+}
